--- a/pinterest_embed_plugin/pubspec.yaml
+++ b/pinterest_embed_plugin/pubspec.yaml
@@ -1,7 +1,10 @@
 name: pinterest_embed_plugin
-description: "A new Flutter plugin project."
-version: 0.0.1
+description: "A Flutter plugin for embedding Pinterest boards and profiles on the web. Seamlessly integrate a Pinterest-like user experience into your web application."
+version: 1.0.0
 homepage: https://github.com/blubnana-org/pinterest_embed_web.git
+issue_tracker: https://github.com/blubnana-org/pinterest_embed_web/issues
+documentation: https://github.com/blubnana-org/pinterest_embed_web?tab=readme-ov-file#readme
+
 
 environment:
   sdk: ^3.7.2
