--- a/pinterest_embed_plugin/pubspec.yaml
+++ b/pinterest_embed_plugin/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   web: ^1.0.0
   plugin_platform_interface: ^2.0.2
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
